<resources>
    <string name="app_name">Alarm</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="app_nam">Timer</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_00_00">00:00</string>
    <string name="dots">:</string>
    <string name="set_timer">Set Timer</string>

</resources>